--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	<div class="firstPage">
 		<div class = "mainTitle" data-aos="fade-right" data-aos-delay="500" data-aos-duration="1000" >
 			<img class="gray1" src="graytitlebox1.png">
-			<h1 class="mainTitleA">the Integration of AI & ML</h1> 
+			<h1 class="mainTitleA">the <span class="integrationA">Integration </span> of AI & ML</h1> 
 			<h2 class="subTitle" data-aos="fade-right" data-aos-delay="1000" data-aos-duration="1000">Information of the Integration</h2>
 			<img class="gray2" src="gray2.png" data-aos="fade-left" data-aos-delay="500" data-aos-duration="1000">
 			<img class="titleImg" data-aos="fade-left" data-aos-delay="500" data-aos-duration="1000" src="techRobot.png">
@@ -74,33 +74,67 @@
 		</div> -->
 	</div>
 
+	<div class="welcomeA">
+		<h1>Welcome to Integration!</h1>
+		<h3>For everything AI & ML.</h3>
+		<h2>Lets Integrate into the Future.</h2>
+	</div>
+
 		<div class="contentDiv">
-			<div id="introductionA" class="introduction" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000" >
-				<h3>Introduction</h3>
+			<div class="introduction">
+					<h3>Introduction</h3>
+			</div>
+			<div class="definition">
+			<div id="introductionA" class="introductionA" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000" >
 				<p>AI (Artificial Intelligence) is a contempt where computers have the ability to perform tasks that had previously or typically would require human intervention. These tasks include low scale, easier tasks to larger, more complex tasks. Things such as problem solving, reasoning, detailed explanations, and the ability to learn are all possible with AI. 
 				</p>
+			</div>
+			<div class="introductionB" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000">
 				<p>ML (Machine Learning) is similar to AI but has a more specific task to further improve AI. ML develops different algorithms that allow the computer to perform tasks without human intervention at any point of the process, if needed. ML has the ability to learn over time like AI allowing it to do these actions. 
 				</p>
+			</div>
+			<div class="introductionB" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000">
 				<p>
 					Social media, web browsing, online shopping, applications, and self-driving cars all have AI integrated into their experiences. It is near impossible today to escape the influence of AI and ML in our daily activities. The curated content in ads, recommended videos, photos, music, destinations and more are all part of AI being used to guide the user in their online experience. 
+				</p>
+			</div>
+		</div>
+
+			<div id="cases" class="PC" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000" >
+				<div class="useCase">
+				<h3>Use Cases</h3>
+			</div>
+			<div class="useCaseA">
+				<p>
+					 AI is used in multiple industries other than just technology related industries. Healthcare, law, education, art, design, and much more all have the ability to integrate AI and ML into their work. Healthcare can use AI to help aid in health solutions, the law industry is currently using AI to quickly comb through cases for factual needs at a faster rate than people, and art / design have been using AI and ML to code self-designing art pieces that change over time. In all of these industries AI has created a generally positive impact. By having an algorithm that can learn from itself, have less human error, and provide faster results AI & ML have the ability to push technology and living into a whole new experience. 
 
 				</p>
 			</div>
-
-			<div id="cases" class="PC" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000" >
-				<h3>Use Cases</h3>
 			</div>
 
 			<div id="ethics" class="ethics" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000" >
+				<div class="ethicsA">
 				<h3>Ethics</h3>
+			</div>
+			<div class="ethicsB">
 				<p>There are many ethical situations to consider when interacting and using AI. From simple tasks for help on homework to integrating it into your own product these considerations should not go unnoticed no matter the scale. The biggest thing that AI aims to do is perform and expel answers as a human would. Giving a familiar response one would expect from a human. 
 				</p>
+			</div>
+			<div class="ethicsC">
 				<p>All this to say, AI will provide the most human-like responses, even if that image is not real or that link is a fake link to a very real looking site. This can pose a dilemma where critical thinking and general knowledge of what AI is becomes so important. 
 				</p>
 			</div>
+			</div>
 
 			<div id="future" class="future" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000" >
+				<div class="futureA">
 				<h3>Future Integration</h3>
+			</div>
+			<div class="futureB">
+				<p>
+					There is a big emphasis on how much AI can take over and replace what humans were doing before it was implemented. This has understandably brought on fear and discomfort with the integration of AI and what that means for their job and personal data safety. There is no doubt that the integration of AI will cause some to lose their jobs or be at risk, but it does introduce a new world of learning and opportunities. It will require a human to monitor and operate the machine and also integrate coding into a majority of jobs which opens another skill set required / achievable. AI has already made a lasting impact on multiple industries and will continue to advance in this manner. 
+				</p>
+			</div>
 			</div>
 		</div>
 
