--- a/index.html
+++ b/index.html
@@ -86,16 +86,16 @@
 			</div>
 			<div class="definition">
 			<div id="introductionA" class="introductionA" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000" >
-				<p>AI (Artificial Intelligence) is a contempt where computers have the ability to perform tasks that had previously or typically would require human intervention. These tasks include low scale, easier tasks to larger, more complex tasks. Things such as problem solving, reasoning, detailed explanations, and the ability to learn are all possible with AI. 
+				<p>AI (Artificial Intelligence) is a concept where computers have the ability to perform tasks that previously or typically would require human intervention. These tasks range from low-scale, easier tasks to larger, more complex tasks. Things such as problem solving, reasoning, detailed explanations, and the ability to learn are all possible with AI.
 				</p>
 			</div>
 			<div class="introductionB" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000">
-				<p>ML (Machine Learning) is similar to AI but has a more specific task to further improve AI. ML develops different algorithms that allow the computer to perform tasks without human intervention at any point of the process, if needed. ML has the ability to learn over time like AI allowing it to do these actions. 
+				<p>ML (Machine Learning) is similar to AI but has a more specific task to further improve AI. ML develops different algorithms that allow the computer to perform tasks without human intervention at any point of the process, if needed. ML has the ability to learn over time, like AI, allowing it to do these actions.
 				</p>
 			</div>
 			<div class="introductionB" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000">
 				<p>
-					Social media, web browsing, online shopping, applications, and self-driving cars all have AI integrated into their experiences. It is near impossible today to escape the influence of AI and ML in our daily activities. The curated content in ads, recommended videos, photos, music, destinations and more are all part of AI being used to guide the user in their online experience. 
+					Social media, web browsing, online shopping, applications, and self-driving cars all have AI integrated into their experiences. It is near impossible today to escape the influence of AI and ML in our daily activities. The curated content in ads, recommended videos, photos, music, destinations, and more are all part of AI being used to guide the user in their online experience.
 				</p>
 			</div>
 		</div>
@@ -106,7 +106,7 @@
 			</div>
 			<div class="useCaseA">
 				<p>
-					 AI is used in multiple industries other than just technology related industries. Healthcare, law, education, art, design, and much more all have the ability to integrate AI and ML into their work. Healthcare can use AI to help aid in health solutions, the law industry is currently using AI to quickly comb through cases for factual needs at a faster rate than people, and art / design have been using AI and ML to code self-designing art pieces that change over time. In all of these industries AI has created a generally positive impact. By having an algorithm that can learn from itself, have less human error, and provide faster results AI & ML have the ability to push technology and living into a whole new experience. 
+					 AI is used in multiple industries other than just technology-related industries. Healthcare, law, education, art, design, and much more all have the ability to integrate AI and ML into their work. Healthcare can use AI to help aid in health solutions, the law industry is currently using AI to quickly comb through cases for factual needs at a faster rate than people, and art / design have been using AI and ML to code self-designing art pieces that change over time. In all of these industries, AI has had a generally positive impact. By having an algorithm that can learn from itself, have less human error, and provide faster results, AI & ML have the ability to push technology and living into a whole new experience.
 
 				</p>
 			</div>
@@ -117,11 +117,11 @@
 				<h3>Ethics</h3>
 			</div>
 			<div class="ethicsB">
-				<p>There are many ethical situations to consider when interacting and using AI. From simple tasks for help on homework to integrating it into your own product these considerations should not go unnoticed no matter the scale. The biggest thing that AI aims to do is perform and expel answers as a human would. Giving a familiar response one would expect from a human. 
+				<p>There are many ethical situations to consider when interacting with and using AI. From simple tasks for help on homework to integrating it into your own product, these considerations should not go unnoticed, no matter the scale. The biggest thing that AI aims to do is perform and expel answers as a human would. Giving a familiar response one would expect from a human.
 				</p>
 			</div>
 			<div class="ethicsC">
-				<p>All this to say, AI will provide the most human-like responses, even if that image is not real or that link is a fake link to a very real looking site. This can pose a dilemma where critical thinking and general knowledge of what AI is becomes so important. 
+				<p>All this to say, AI will provide the most human-like responses, even if that image is not real or that link is a fake link to a very real-looking site. This can pose a dilemma where critical thinking and general knowledge of AI becomes so important.
 				</p>
 			</div>
 			</div>
@@ -132,7 +132,7 @@
 			</div>
 			<div class="futureB">
 				<p>
-					There is a big emphasis on how much AI can take over and replace what humans were doing before it was implemented. This has understandably brought on fear and discomfort with the integration of AI and what that means for their job and personal data safety. There is no doubt that the integration of AI will cause some to lose their jobs or be at risk, but it does introduce a new world of learning and opportunities. It will require a human to monitor and operate the machine and also integrate coding into a majority of jobs which opens another skill set required / achievable. AI has already made a lasting impact on multiple industries and will continue to advance in this manner. 
+					There is a big emphasis on how much AI can take over and replace what humans were doing before it was implemented. This has understandably brought on fear and discomfort with the integration of AI and what that means for their job and personal data safety. There is no doubt that the integration of AI will cause some to lose their jobs or be at risk, but it does introduce a new world of learning and opportunities. It will require a human to monitor and operate the machine and also integrate coding into the majority of jobs, which opens another skill set required / achievable. AI has already made a lasting impact on multiple industries and will continue to advance in this manner.
 				</p>
 			</div>
 			</div>
@@ -147,8 +147,58 @@
 				<p>December 2023</p>
 			</div>
 		</div>
+
+		<div class="welcomeB">
+			<h1>Oh...you're still here?</h1>
+		</div>
+
+		<div class="badCase" data-aos="fade-right">
+			<div class="badCaseA" data-aos="fade-right">
+				<h3> <a href="https://en.wikipedia.org/wiki/Tay_(chatbot)#:~:text=Tay%20was%20an%20artificial%20intelligence,only%2016%20hours%20after%20its">Microsoft's Tay Chatbot</a>
+				</h3>
+				<p>
+					In 2016, Microsift released Tay, a chatbot intended to be a conversational AI for teens and young adults.  
+				</p>
+				<p>
+					In 24 hours, Tay went from friendly to extremely hostile toward humans. Tay even tweeted their own thoughts during this time.
+				</p>
+				<p>
+					These thoughts were racist, sexist, and included misinformation. Tay was never taught how to decipher good and bad behavior. 
+				</p>
+			</div>
+		</div>
+
+		<div class="welcomeB">
+			<h1>Sorry, you weren't meant to see that.</h1>
+		</div>
+
+		<div class="badCase" data-aos="fade-left">
+			<div class="badCaseA" data-aos="fade-left">
+				<h3> <a href="https://www.cmu.edu/news/stories/archives/2015/july/online-ads-research.html#:~:text=Experiments%20by%20Carnegie%20Mellon%20University,fairness%20of%20targeting%20ads%20online.">Google's Targeted (Biased) Ads</a>
+				</h3>
+				<p>
+					In 2015, Carnegie Mellon tested Google's targeted ads, exposing its gender bias / discrimination. 
+				</p>
+				<p>
+					User profiles of equal parts men and women, with the same qualifications, visited employment websites but were not presented with the same job ads. 
+				</p>
+				<p>
+					Men were shown ads for high-paying jobs at a rate 6x times higher than women. This was due to the algorithmic bias created by Google.  
+				</p>
+			</div>
+		</div>
+
+		<div class="welcomeB">
+			<h1>Please exit the webiste now.</h1>
+		</div>
+
 		
 	</div>
 
 </body>
 </html>
+
+
+
+
+
